--- a/package.json
+++ b/package.json
@@ -1,53 +1,55 @@
 {
-  "name": "lpdv",
-  "version": "0.0.0",
-  "main": "main.js",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "start:electron": "ng build --base-href ./ && electron .",
-    "electron": "electron ."
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~11.0.0",
-    "@angular/cdk": "^11.0.0",
-    "@angular/common": "~11.0.0",
-    "@angular/compiler": "~11.0.0",
-    "@angular/core": "~11.0.0",
-    "@angular/forms": "~11.0.0",
-    "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "~11.0.0",
-    "@angular/platform-browser-dynamic": "~11.0.0",
-    "@angular/router": "~11.0.0",
-    "electron-is-dev": "^1.2.0",
-    "electron-reloader": "^1.0.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/cli": "~11.0.1",
-    "@angular/compiler-cli": "~11.0.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "electron": "^10.1.5",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
-  }
+    "name": "lpdv",
+    "version": "0.0.0",
+    "main": "main.js",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "start:electron": "ng build --base-href ./ && electron .",
+        "electron": "electron ."
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~11.0.0",
+        "@angular/cdk": "^11.0.0",
+        "@angular/common": "~11.0.0",
+        "@angular/compiler": "~11.0.0",
+        "@angular/core": "~11.0.0",
+        "@angular/forms": "~11.0.0",
+        "@angular/material": "^11.0.0",
+        "@angular/platform-browser": "~11.0.0",
+        "@angular/platform-browser-dynamic": "~11.0.0",
+        "@angular/router": "~11.0.0",
+        "bootstrap": "^4.5.3",
+        "electron-is-dev": "^1.2.0",
+        "electron-reloader": "^1.0.1",
+        "ngx-bootstrap": "^6.2.0",
+        "rxjs": "~6.6.0",
+        "tslib": "^2.0.0",
+        "zone.js": "~0.10.2"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1100.1",
+        "@angular/cli": "~11.0.1",
+        "@angular/compiler-cli": "~11.0.0",
+        "@types/jasmine": "~3.6.0",
+        "@types/node": "^12.11.1",
+        "codelyzer": "^6.0.0",
+        "electron": "^10.1.5",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~5.1.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.0.3",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "protractor": "~7.0.0",
+        "ts-node": "~8.3.0",
+        "tslint": "~6.1.0",
+        "typescript": "~4.0.2"
+    }
 }
