--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "electron-is-dev": "^1.2.0",
         "electron-json-storage": "^4.3.0",
         "electron-reloader": "^1.0.1",
+        "jwt-decode": "^3.1.2",
         "ngx-bootstrap": "^6.2.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
