started working on firebase integration

--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e",
-        "start:electron": "ng build --base-href ./ && electron .",
-        "electron": "electron ."
+        "e2e": "ng e2e"
     },
     "private": true,
     "dependencies": {
@@ -19,15 +17,14 @@
         "@angular/common": "~11.0.0",
         "@angular/compiler": "~11.0.0",
         "@angular/core": "~11.0.0",
+        "@angular/fire": "^6.1.5",
         "@angular/forms": "~11.0.0",
         "@angular/material": "^11.0.0",
         "@angular/platform-browser": "~11.0.0",
         "@angular/platform-browser-dynamic": "~11.0.0",
         "@angular/router": "~11.0.0",
         "bootstrap": "^4.5.3",
-        "electron-is-dev": "^1.2.0",
-        "electron-json-storage": "^4.3.0",
-        "electron-reloader": "^1.0.1",
+        "firebase": "^8.9.1",
         "jwt-decode": "^3.1.2",
         "ngx-bootstrap": "^6.2.0",
         "rxjs": "~6.6.0",
@@ -41,7 +38,6 @@
         "@types/jasmine": "~3.6.0",
         "@types/node": "^12.11.1",
         "codelyzer": "^6.0.0",
-        "electron": "^10.1.5",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
         "karma": "~5.1.0",
