--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "firebase": "^8.9.1",
         "jwt-decode": "^3.1.2",
         "ngx-bootstrap": "^6.2.0",
-        "rxjs": "~6.6.0",
+        "rxjs": "^6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
     },
