edited database migration file

--- a/transfer/package.json
+++ b/transfer/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node transfer.js"
+    "start": "node index.js",
+    "start2": "node transfer.js"
   },
   "author": "",
   "license": "ISC",
